Disable VDPAU per default.

--- a/graphics/dri/Makefile
+++ b/graphics/dri/Makefile
@@ -19,9 +19,9 @@ USES=		gettext:build
 OPTIONS_DEFINE=	TEXTURE
 
 OPTIONS_DEFINE_i386=	GALLIUM VDPAU
-OPTIONS_DEFAULT_i386=	GALLIUM VDPAU
+OPTIONS_DEFAULT_i386=	GALLIUM
 OPTIONS_DEFINE_amd64=	GALLIUM VDPAU
-OPTIONS_DEFAULT_amd64=	GALLIUM VDPAU
+OPTIONS_DEFAULT_amd64=	GALLIUM
 
 GALLIUM_DESC=	Gallium (llvm backed) dri drivers
 TEXTURE_DESC=	Enable texture-float support (patent encumbered)
