darktable: Update to 1.5.1 (1.6.0 release candidate)

--- a/graphics/darktable/Makefile
+++ b/graphics/darktable/Makefile
@@ -2,10 +2,9 @@
 # $FreeBSD$
 
 PORTNAME=	darktable
-PORTVERSION=	1.4.2
-PORTREVISION=	5
+PORTVERSION=	1.5.1
 CATEGORIES=	graphics
-MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTVERSION:R}
+MASTER_SITES=	https://github.com/darktable-org/${PORTNAME}/releases/download/release-${PORTVERSION}/
 
 MAINTAINER=	dumbbell@FreeBSD.org
 COMMENT=	Virtual lighttable and darkroom for photographers
@@ -39,10 +38,12 @@ RAWSPEED_DESC=	Compile with rawspeed backend
 SLIDESHOW_DESC=	Build OpenGL/SDL slideshow viewer
 
 OPTIONS_DEFAULT=COLORD FB_PICASA FLICKR GEO GPHOTO LUA NLS OPENEXR	\
-		OPENJPEG RAWSPEED WEBP
+		OPENJPEG RAWSPEED SLIDESHOW SQUISH WEBP
 OPTIONS_SUB=	yes
 
 CMAKE_ARGS+=	-DBINARY_PACKAGE_BUILD=1
+CMAKE_ARGS+=	-DBUILD_CMSTEST:BOOL=ON
+CMAKE_ARGS+=	-DUSE_KWALLET:BOOL=ON
 
 # darktable 1.4 can use colord but provides its own libcolord,
 # statically linked to libdarktable.so.
@@ -67,6 +68,11 @@ GPHOTO_CMAKE_OFF=	-DUSE_CAMERA_SUPPORT:BOOL=OFF
 GRAPHMAGICK_LIB_DEPENDS=libGraphicsMagick.so:${PORTSDIR}/graphics/GraphicsMagick
 GRAPHMAGICK_CMAKE_OFF=	-DUSE_GRAPHICSMAGICK:BOOL=OFF
 
+# darktable requires libsecret 1.16+.
+#LIBSECRET_LIB_DEPENDS=	libsecret-1.so:${PORTSDIR}/security/libsecret
+#LIBSECRET_CMAKE_OFF=	-DUSE_LIBSECRET:BOOL=OFF
+CMAKE_ARGS+=		-DUSE_LIBSECRET:BOOL=OFF
+
 LUA_USES=		lua
 LUA_CMAKE_OFF=		-DUSE_LUA:BOOL=OFF
 
@@ -81,7 +87,7 @@ OPENJPEG_CMAKE_OFF=	-DUSE_OPENJPEG:BOOL=OFF
 
 RAWSPEED_CMAKE_OFF=	-DDONT_USE_RAWSPEED:BOOL=ON
 
-SLIDESHOW_USE=		 GL=gl SDL=sdl
+SLIDESHOW_USE=		GL=gl SDL=sdl
 SLIDESHOW_CMAKE_OFF=	-DBUILD_SLIDESHOW:BOOL=OFF
 
 SQUISH_BUILD_DEPENDS=	${LOCALBASE}/lib/libsquish.a:${PORTSDIR}/graphics/squish
