--- a/x11-drivers/xf86-video-scfb/Makefile
+++ b/x11-drivers/xf86-video-scfb/Makefile
@@ -17,6 +17,6 @@ GH_COMMIT=      bdeb3bf
 
 GNU_CONFIGURE=  yes
 USES=		libtool pkgconfig
-USE_XORG=	xorg-server xproto inputproto randrproto renderproto videoproto
+USE_XORG=	xorg-server xproto glproto inputproto randrproto renderproto videoproto xf86driproto
 
 .include <bsd.port.mk>
