xf86-video-scfb: Add resourceproto to the build dependencies

--- a/x11-drivers/xf86-video-scfb/Makefile
+++ b/x11-drivers/xf86-video-scfb/Makefile
@@ -17,6 +17,7 @@ GH_COMMIT=      bdeb3bf
 
 GNU_CONFIGURE=  yes
 USES=		libtool pkgconfig
-USE_XORG=	xorg-server xproto glproto inputproto randrproto renderproto videoproto xf86driproto
+USE_XORG=	xorg-server xproto glproto inputproto randrproto \
+		renderproto resourceproto videoproto xf86driproto
 
 .include <bsd.port.mk>
