virtualbox-ose-additions: Run pkgconf in the "do-install" target
No more Makefile variable.

--- a/emulators/virtualbox-ose-additions/Makefile
+++ b/emulators/virtualbox-ose-additions/Makefile
@@ -101,9 +101,6 @@ KMK_ARCH=	freebsd.x86
 KMK_ARCH=	freebsd.${ARCH}
 .endif
 
-XSERVER_VER!=	pkgconf --modversion xorg-server
-XSERVER_ABI:=	${XSERVER_VER:S/.//:R}
-
 .include <bsd.port.pre.mk>
 
 .if ${COMPILER_TYPE} == clang
@@ -183,7 +180,7 @@ do-install:
 	    ${STAGEDIR}${PREFIX}/share/autostart/
 
 	${MKDIR} ${STAGEDIR}${VIDEODIR}
-	${INSTALL_DATA} ${VBOX_BIN}/vboxvideo_drv_${XSERVER_ABI}.so \
+	${INSTALL_DATA} ${VBOX_BIN}/vboxvideo_drv_$$(pkgconf --modversion xorg-server | sed -E -e 's/.[0-9]+$//' -e 's/\.//').so \
 	    ${STAGEDIR}${VIDEODIR}/vboxvideo_drv.so
 .endif
 
