--- a/x11-drivers/xf86-video-scfb/Makefile
+++ b/x11-drivers/xf86-video-scfb/Makefile
@@ -15,9 +15,14 @@ GH_PROJECT=     ${PORTNAME}
 GH_TAGNAME=     bdeb3bf
 GH_COMMIT=      bdeb3bf
 
-XORG_CAT=	driver
-USE_TGZ=	yes
-USE_XORG=
+USES=		libtool pkgconfig
+GNU_CONFIGURE= 	yes
+DIST_SUBDIR=	xorg/driver
+USE_XORG=	xorg-server xproto randrproto xi renderproto xextproto \
+		inputproto kbproto fontsproto videoproto dri2proto \
+		xf86driproto glproto xineramaproto resourceproto \
+		scrnsaverproto
+CONFIGURE_ENV=	DRIVER_MAN_SUFFIX=4x DRIVER_MAN_DIR='$$(mandir)/man4'
 INSTALL_TARGET=	install-strip
 
 .include <bsd.port.mk>
