--- a/x11-servers/xorg-server/Makefile
+++ b/x11-servers/xorg-server/Makefile
@@ -42,6 +42,7 @@ EXTRA_PATCHES+=	${FILESDIR}/extra-clang \
 		${FILESDIR}/extra-new-bad-impl \
 		${FILESDIR}/extra-new-dix_dixfonts.c
 .else
+FORBIDDEN=		unfixed security issues
 XORG_VERSION=	1.7.7
 XORG_REVISION=	14
 PLIST_SUB+=	OLD="" NEW="@comment "
