Add correct master site and only build on 9.x.
Add correct MASTER_SITE (commented out, distfile needs uploaded first)
Add ignore for < 900000 and > 1000000. We only want to provide this driver
for 9.x

--- a/x11-drivers/drm-i915-kmod/Makefile
+++ b/x11-drivers/drm-i915-kmod/Makefile
@@ -4,6 +4,7 @@
 PORTNAME=	drm-i915-kmod
 DISTVERSION=	10.1
 CATEGORIES=	x11-drivers
+#MASTER_SITES=	LOCAL/dumbbell
 MASTER_SITES=	http://people.freebsd.org/~dumbbell/
 DISTNAME=	drm-i915-${DISTVERSION}
 
@@ -13,12 +14,15 @@ COMMENT=	Kernel DRM driver for i915 GPUs
 LICENSE=	MIT
 
 USES=		tar:xz kmod
-UNIQUENAME=	${PORTNAME}${PKGNAMESUFFIX}
 ONLY_FOR_ARCHS=	i386 amd64
 
 KMODNAME=	i915kms_port
 
 .include <bsd.port.options.mk>
+
+.if (${OSVERSION} < 900000 || ${OSVERSION} > 1000000)
+IGNORE=		This port is only for 9.x systems.
+.endif
 
 .if ${PORT_OPTIONS:MDEBUG}
 MAKE_ARGS+=" HAVE_DEBUG=YES"
