--- a/x11-servers/xorg-server/files/patch-xkb_Makefile.in
+++ b/x11-servers/xorg-server/files/patch-xkb_Makefile.in
@@ -1,5 +1,6 @@
-Index: xkb/Makefile.in
-@@ -787,7 +787,7 @@
+--- xkb/Makefile.in.orig	2014-12-12 22:12:45 UTC
++++ xkb/Makefile.in
+@@ -790,7 +790,7 @@ info: info-am
  
  info-am:
  
