--- a/graphics/darktable/Makefile
+++ b/graphics/darktable/Makefile
@@ -20,7 +20,7 @@ LIB_DEPENDS=	libexiv2.so:${PORTSDIR}/graphics/exiv2 \
 ONLY_FOR_ARCHS=	i386 amd64
 ONLY_FOR_ARCHS_REASON=	uses SSE extensions
 
-USES=		cmake:outsource compiler:features desktop-file-utils	\
+USES=		compiler:c++11-lib cmake:outsource desktop-file-utils	\
 		ninja pkgconfig tar:xz
 USE_GNOME=	librsvg2
 USE_SQLITE=	yes
