darktable: libsecret 0.18 is now available in the Ports tree

--- a/graphics/darktable/Makefile
+++ b/graphics/darktable/Makefile
@@ -29,8 +29,8 @@ INSTALLS_ICONS=	yes
 LDFLAGS+=	-L${LOCALBASE}/lib -lintl
 
 OPTIONS_DEFINE=	COLORD DOCS FB_PICASA FLICKR GEO GNOMEKEYRING GPHOTO	\
-		GRAPHMAGICK LUA NLS OPENEXR OPENJPEG RAWSPEED SLIDESHOW	\
-		SQUISH WEBP
+		GRAPHMAGICK LIBSECRET LUA NLS OPENEXR OPENJPEG RAWSPEED	\
+		SLIDESHOW SQUISH WEBP
 
 GEO_DESC=	Support geotagging
 FB_PICASA_DESC=	Support export to Facebook and Picasa
@@ -69,10 +69,8 @@ GPHOTO_CMAKE_OFF=	-DUSE_CAMERA_SUPPORT:BOOL=OFF
 GRAPHMAGICK_LIB_DEPENDS=libGraphicsMagick.so:${PORTSDIR}/graphics/GraphicsMagick
 GRAPHMAGICK_CMAKE_OFF=	-DUSE_GRAPHICSMAGICK:BOOL=OFF
 
-# darktable requires libsecret 1.16+.
-#LIBSECRET_LIB_DEPENDS=	libsecret-1.so:${PORTSDIR}/security/libsecret
-#LIBSECRET_CMAKE_OFF=	-DUSE_LIBSECRET:BOOL=OFF
-CMAKE_ARGS+=		-DUSE_LIBSECRET:BOOL=OFF
+LIBSECRET_LIB_DEPENDS=	libsecret-1.so:${PORTSDIR}/security/libsecret
+LIBSECRET_CMAKE_OFF=	-DUSE_LIBSECRET:BOOL=OFF
 
 LUA_USES=		lua
 LUA_CMAKE_OFF=		-DUSE_LUA:BOOL=OFF
