Revert "Drop nvidia driver 173."
This reverts commit 9ad05c182f2897b6413bcd6f199064b09b27b204.

Conflicts:
	MOVED

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -208,6 +208,7 @@
     SUBDIR += mxico
     SUBDIR += numlockx
     SUBDIR += nvidia-driver
+    SUBDIR += nvidia-driver-173
     SUBDIR += nvidia-driver-304
     SUBDIR += nvidia-settings
     SUBDIR += nvidia-xconfig
